:sparkles: Updated buildscript, ported to newest Minestom