@@ -1,41 +1,37 @@
-package io.github.openminigameserver.cloudminestom;
+package live.mcparty.cloud.minestom;
 
 import cloud.commandframework.exceptions.*;
 import kotlin.collections.ArraysKt;
+import live.mcparty.cloud.minestom.arg.ArgumentDynamicWord;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import net.minestom.server.MinecraftServer;
-import net.minestom.server.chat.ChatColor;
 import net.minestom.server.command.CommandSender;
-import net.minestom.server.command.builder.Arguments;
 import net.minestom.server.command.builder.Command;
+import net.minestom.server.command.builder.CommandContext;
 import net.minestom.server.command.builder.CommandExecutor;
 import net.minestom.server.command.builder.CommandSyntax;
 import net.minestom.server.command.builder.arguments.Argument;
-import net.minestom.server.command.builder.arguments.ArgumentDynamicStringArray;
-import net.minestom.server.command.builder.arguments.ArgumentDynamicWord;
+import net.minestom.server.command.builder.arguments.ArgumentStringArray;
+import net.minestom.server.command.builder.arguments.ArgumentWord;
+import net.minestom.server.command.builder.suggestion.SuggestionEntry;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletionException;
-import java.util.stream.Collectors;
-
-import static io.github.openminigameserver.cloudminestom.CloudInteropHelper.removeSlashPrefix;
 
 public class MinestomCloudCommand<C> extends Command {
 
-    private static final String MESSAGE_INTERNAL_ERROR = ChatColor.RED
-            + "An internal error occurred while attempting to perform this" +
-            " command.";
-    private static final String MESSAGE_NO_PERMS =
-            ChatColor.RED + "I'm sorry, but you do not have permission to perform this command. "
-                    + "Please contact the server administrators if you believe that this is in error.";
-    private static final String MESSAGE_UNKNOWN_COMMAND = "Unknown command. Type \"/help\" for help.";
+    private static final Component MESSAGE_INTERNAL_ERROR = Component.text("An internal error occurred while attempting to perform this command.", NamedTextColor.RED);
+    private static final Component MESSAGE_NO_PERMS = Component.text("I'm sorry, but you do not have permission to perform this command. Please contact the server administrators if you believe that this is in error.", NamedTextColor.RED);
+    private static final Component MESSAGE_UNKNOWN_COMMAND = Component.text("Unknown command. Type \"/help\" for help.", NamedTextColor.RED);
 
     private final MinestomCommandManager<C> manager;
     private final CommandExecutor emptyExecutor = (sender, args) -> {
     };
-    private Boolean isAmbiguous = false;
+    private boolean isAmbiguous = false;
 
     public MinestomCloudCommand(cloud.commandframework.Command<C> cloudCommand, MinestomCommandManager<C> manager,
                                 String name, String... aliases) {
@@ -64,6 +60,16 @@ public class MinestomCloudCommand<C> extends Command {
                         .skip(1)
                         .map(CloudInteropHelper::convertCloudArgumentToMinestom)
                         .toArray(Argument[]::new);
+        for (Argument<?> arg : arguments) {
+            if (!(arg instanceof ArgumentDynamicWord))
+                continue;
+
+            arg.setSuggestionCallback((sender, context, suggestion) -> {
+                for (String suggested : manager.suggest(manager.mapCommandSender(sender), CloudInteropHelper.removeSlashPrefix(context.getInput()))) {
+                    suggestion.addEntry(new SuggestionEntry(suggested));
+                }
+            });
+        }
 
         var containsSyntax =
                 getSyntaxes().stream().anyMatch(syntax -> Arrays.equals(getArgumentNamesFromArguments(arguments),
@@ -76,7 +82,7 @@ public class MinestomCloudCommand<C> extends Command {
 
             var toMove = syntaxes.stream().filter(it ->
                     Arrays.stream(it.getArguments()).allMatch(arg -> arg instanceof ArgumentDynamicWord)
-            ).collect(Collectors.toList());
+            ).toList();
 
             syntaxes.removeAll(toMove);
             syntaxes.addAll(0, toMove);
@@ -93,19 +99,24 @@ public class MinestomCloudCommand<C> extends Command {
 
         if (isAmbiguous) {
             syntaxes.clear();
-            addSyntax(emptyExecutor, new ArgumentDynamicStringArray("args"));
+            ArgumentStringArray arg = new ArgumentStringArray("args");
+            arg.setSuggestionCallback((sender, context, suggestion) -> {
+                for (String suggested : manager.suggest(manager.mapCommandSender(sender), CloudInteropHelper.removeSlashPrefix(context.getInput()))) {
+                    suggestion.addEntry(new SuggestionEntry(suggested));
+                }
+            });
+            addSyntax(emptyExecutor, arg);
         }
     }
 
     @Override
-    public void globalListener(@NotNull CommandSender commandSender, @NotNull Arguments arguments,
-                               @NotNull String command) {
+    public void globalListener(@NotNull CommandSender commandSender, @NotNull CommandContext context, @NotNull String command) {
         var input = CloudInteropHelper.removeSlashPrefix(command);
         final C sender = this.manager.mapCommandSender(commandSender);
         this.manager.executeCommand(
-                sender,
-                input
-        )
+                        sender,
+                        input
+                )
                 .whenComplete((commandResult, throwable) -> {
                     if (throwable != null) {
                         if (throwable instanceof CompletionException) {
@@ -116,12 +127,8 @@ public class MinestomCloudCommand<C> extends Command {
                             this.manager.handleException(sender,
                                     InvalidSyntaxException.class,
                                     (InvalidSyntaxException) throwable, (c, e) ->
-                                            commandSender.sendMessage(
-                                                    ChatColor.RED + "Invalid Command Syntax. "
-                                                            + "Correct command syntax is: "
-                                                            + ChatColor.GRAY + "/"
-                                                            + ((InvalidSyntaxException) finalThrowable)
-                                                            .getCorrectSyntax())
+                                            commandSender.sendMessage(Component.text("Invalid Command Syntax. Correct command syntax is: ", NamedTextColor.RED)
+                                                    .append(Component.text("/" + ((InvalidSyntaxException) finalThrowable).getCorrectSyntax(), NamedTextColor.GRAY)))
                             );
                         } else if (throwable instanceof InvalidCommandSenderException) {
                             this.manager.handleException(sender,
@@ -145,9 +152,8 @@ public class MinestomCloudCommand<C> extends Command {
                             this.manager.handleException(sender,
                                     ArgumentParseException.class,
                                     (ArgumentParseException) throwable, (c, e) ->
-                                            commandSender.sendMessage(
-                                                    ChatColor.RED + "Invalid Command Argument: "
-                                                            + ChatColor.GRAY + finalThrowable.getCause().getMessage())
+                                            commandSender.sendMessage(Component.text("Invalid Command Argument: ", NamedTextColor.RED)
+                                                    .append(Component.text(finalThrowable.getCause().getMessage(), NamedTextColor.GRAY)))
                             );
                         } else if (throwable instanceof CommandExecutionException) {
                             this.manager.handleException(sender,
@@ -171,11 +177,4 @@ public class MinestomCloudCommand<C> extends Command {
                 });
 
     }
-
-    @Nullable
-    @Override
-    public String[] onDynamicWrite(@NotNull CommandSender sender, @NotNull String text) {
-        return manager.suggest(manager.mapCommandSender(sender), removeSlashPrefix(text)).toArray(String[]::new);
-    }
-
 }
